--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/nextjs": "^4.27.2",
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mux/mux-node": "^7.3.3",
+    "@mux/mux-player-react": "^2.2.0",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -25,7 +27,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.292.0",
-    "next": "14.0.3",
+    "next": "^13.4.12",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
